src/main/fabric8/odata-route.yml
apiVersion: v1
kind: Route
metadata:
  name: ${project.artifactId}-odata
spec:
  host: ${project.artifactId}-odata.apps.example.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: ${project.artifactId}-odata
